--- a/.gitignore
+++ b/.gitignore
@@ -22,12 +22,8 @@ venv/
 *.sublime-workspace
 
 # Visual Studio Code
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history/*
+.vscode/
+.history/
 
 # Miscellaneous
 /.angular/cache
